validations 'Login', 'Register', 'NewMovemenet' and 'Balance'

--- a/src/personal-finances-react/public/index.html
+++ b/src/personal-finances-react/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <title>Personal Finances</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;600&family=Public+Sans:wght@500&family=Spectral+SC&display=swap" rel="stylesheet">
 
   </head>
   <body>
